Add connections endpoint to the public API (#949)
* Add connections endpoint to the public API

* Add headline to users endpoint
